--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="footer.css">
 
 
-    <title>YCC- BLOG1</title>
+    <title>Youth-Climate-Connect</title>
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                         <a class="nav-link blog-link " href="english.html" target="_blank"> Blogs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
+                        <a class="nav-link blog-link" href="newrelease.html" target="_blank">New Release</a>
                     </li>
 
                 </ul>
