--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </li> -->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact/login.html">Contact</a>
+                        <a class="nav-link" href="Blog_1.html">Contact</a>
                     </li>
 
                     <li class="nav-item">
