--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link blog-link " href="english.html" target="_blank"> Blogs</a>
+                        <a class="nav-link blog-link " href=card.html target="_blank"> Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
