--- a/card.html
+++ b/card.html
@@ -58,7 +58,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link blog-link " href="english.html" target="_blank">My Blogs</a>
+            <a class="nav-link blog-link " href="english.html" target="_blank">Blogs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
@@ -133,9 +133,8 @@
             lass="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-              the card's content.</p>
-            <a href="plants.html" class="btn btn-success">Read more</a>
+            <p class="card-text">The impact of climate change on agriculture in Pakistan</p>
+            <a href=Blog_1.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
