--- a/card.html
+++ b/card.html
@@ -132,7 +132,7 @@
           <img src="https://images.pexels.com/photos/3039036/pexels-photo-3039036.jpeg?auto=compress&cs=tinysrgb&w=600"
             lass="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">19 March 2024</h5>
             <p class="card-text">The impact of climate change on agriculture in Pakistan</p>
             <a href=Blog_1.html class="btn btn-success">Read more</a>
           </div>
@@ -145,10 +145,9 @@
           <img src="https://images.pexels.com/photos/113335/pexels-photo-113335.jpeg?auto=compress&cs=tinysrgb&w=600"
             lass="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-              the card's content.</p>
-            <a href="plants.html" class="btn btn-success">Read more</a>
+            <h5 class="card-title">21 March 2024</h5>
+            <p class="card-text">The urban heat islands in Pakistani cities</p>
+            <a href=Blog_2.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -158,10 +157,9 @@
           <img src="https://images.pexels.com/photos/1906439/pexels-photo-1906439.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Third Blog</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">24 March 2024</h5>
+            <p class="card-text">The glacial melting in the Himalayas and its consequences</p>
+            <a href=Blog_3.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -170,10 +168,9 @@
           <img src="https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body ">
-            <h5 class="card-title">Fourth Blog</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">27 March 2024</h5>
+            <p class="card-text">The climate change adaptation strategies for coastal areas</p>
+            <a href=Blog_4.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -190,10 +187,9 @@
           <img src="https://images.pexels.com/photos/418831/pexels-photo-418831.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">30 March 2024</h5>
+            <p class="card-text">The renewable energy potential in Pakistan</p>
+            <a href=Blog_5.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -203,10 +199,10 @@
           <img src="https://images.pexels.com/photos/1072824/pexels-photo-1072824.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">2 April 2024</h5>
+            <p class="card-text">The Net Zero Emissions Targets A Path to a Sustainable Future
+</p>
+            <a href=Blog_6.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -216,10 +212,9 @@
           <img src="https://images.pexels.com/photos/2990650/pexels-photo-2990650.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">5 April 2024</h5>
+            <p class="card-text">Climate Finance and Green Investments Driving Climate Action Through Financial Mobilization</p>
+            <a href=Blog_7.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -228,10 +223,9 @@
           <img src="https://images.pexels.com/photos/1105019/pexels-photo-1105019.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">8 April 2024</h5>
+            <p class="card-text">Climate Change Adaptation Strategies for Coastal Areas Building Resilience in Vulnerable Regions</p>
+            <a href=Blog_8.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -246,10 +240,9 @@
           <img src="https://images.pexels.com/photos/2559749/pexels-photo-2559749.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">11 April 2024</h5>
+            <p class="card-text"> The Global Climate Policy and Agreements</p>
+            <a href=Blog_9.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -259,10 +252,9 @@
           <img src="https://images.pexels.com/photos/5273091/pexels-photo-5273091.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">14 April 2024</h5>
+            <p class="card-text">  The Climate Change Impacts on Biodiversity and Ecosystems Preserving Earth's Natural Heritage</p>
+            <a href=Blog_10.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -272,10 +264,9 @@
           <img src="https://images.pexels.com/photos/7944809/pexels-photo-7944809.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">17 April 2024</h5>
+            <p class="card-text">  The Climate Change and Its Effects on Global Agriculture</p>
+            <a href=Blog_11.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -284,10 +275,9 @@
           <img src="https://images.pexels.com/photos/459728/pexels-photo-459728.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">20 April 2024</h5>
+            <p class="card-text"> The Strategies for Climate Change Adaptation in Urban Areas</p>
+            <a href=Blog_12.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -302,10 +292,9 @@
           <img src="https://images.pexels.com/photos/3401354/pexels-photo-3401354.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">23 April 2024</h5>
+            <p class="card-text">The Climate Change and Its Impact on Sea Levels and Coastal Communities</p>
+            <a href=Blog_13.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -315,10 +304,9 @@
           <img src="https://images.pexels.com/photos/682078/pexels-photo-682078.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">26 April 2024</h5>
+            <p class="card-text">The Economics of Climate Change: Costs, Benefits, and Policy Implications</p>
+            <a href=Blog_14.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -328,10 +316,10 @@
           <img src="https://images.pexels.com/photos/2547565/pexels-photo-2547565.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">29 April 2024</h5>
+            <p class="card-text"> The Climate Change and Human Health: Risks and Challenges
+</p>
+            <a href=Blog_15.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -340,10 +328,10 @@
           <img src="https://images.pexels.com/photos/7512846/pexels-photo-7512846.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">30 April 2024</h5>
+            <p class="card-text"The Climate Change and Water Resources Management
+</p>
+            <a href=Blog_16.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -358,10 +346,9 @@
           <img src="https://images.pexels.com/photos/3480494/pexels-photo-3480494.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">1 May 2024</h5>
+            <p class="card-text">  The Role of Forests in Climate Change Mitigation and Carbon Sequestration</p>
+            <a href=Blog_17.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -371,10 +358,9 @@
           <img src="https://images.pexels.com/photos/339614/pexels-photo-339614.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">2 May 2024</h5>
+            <p class="card-text"> The Climate Change and Extreme Weather Events Trends and Implications</p>
+            <a href=Blog_18.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -384,10 +370,9 @@
           <img src="https://images.pexels.com/photos/2020381/pexels-photo-2020381.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">3 May 2024</h5>
+            <p class="card-text"> The Climate Change and Ocean Acidification Impacts on Marine Ecosystems</p>
+            <a href=Blog_19.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -396,10 +381,9 @@
           <img src="https://images.pexels.com/photos/7728082/pexels-photo-7728082.jpeg?auto=compress&cs=tinysrgb&w=600"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-success">Read more</a>
+            <h5 class="card-title">4 May 2024</h5>
+            <p class="card-text">The Role of Greenhouse Gas Emissions from Agriculture in Climate Change</p>
+            <a href=Blog_20.html class="btn btn-success">Read more</a>
           </div>
         </div>
       </div>
@@ -426,10 +410,10 @@
             <h2>LINKS</h2>
             <a href="">Home</a>
             <a href="">About</a>
-            <a href="">Achievements</a>
+<!--             <a href="">Achievements</a> -->
             <a href="">Contact</a>
-            <a href="">English blog</a>
-            <a href="">Urdu blog</a>
+<!--             <a href="">English blog</a>
+            <a href="">Urdu blog</a> -->
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 mt-5 ">
             <div class="icons icon">
