--- a/newrelaese.html
+++ b/newrelaese.html
@@ -202,7 +202,7 @@
             </figure>
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 d-flex flex-column mt-5 links">
-            <h2>LINKS</h2>
+<!--             <h2>LINKS</h2> -->
 <!--             <a href="">Home</a>
             <a href="">About</a>
             <a href="">Achievements</a>
