--- a/Blog_3.html
+++ b/Blog_3.html
@@ -161,11 +161,11 @@
             </figure>
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 d-flex flex-column mt-5 links">
-            <h2>LINKS</h2>
+<!--             <h2>LINKS</h2>
             <a href="">Home</a>
             <a href="">About</a>
             
-            <a href="">Contact</a>
+            <a href="">Contact</a> -->
            
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 mt-5">
