--- a/card.html
+++ b/card.html
@@ -407,13 +407,13 @@
             </figure>
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 d-flex flex-column mt-5 links">
-<!--             <h2>LINKS</h2> -->
-<!--             <a href="">Home</a>
-            <a href="">About</a>
-<!--             <a href="">Achievements</a> -->
-<!--             <a href="">Contact</a> -->
-<!--             <a href="">English blog</a>
-            <a href="">Urdu blog</a> --> -->
+<!--             <h2>LINKS</h2>  -->
+<!--            <a href="">Home</a> -->
+<!--             <a href="">About</a> -->
+<!--              <a href="">Achievements</a>  -->
+<!--             <a href="">Contact</a>  -->
+<!--             <a href="">English blog</a> -->
+<!--             <a href="">Urdu blog</a> -->
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 mt-5 ">
             <div class="icons icon">
