--- a/card.html
+++ b/card.html
@@ -329,8 +329,7 @@
             class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">30 April 2024</h5>
-            <p class="card-text"The Climate Change and Water Resources Management
-</p>
+            <p class="card-text">The Climate Change and Water Resources Management</p>
             <a href=Blog_16.html class="btn btn-success">Read more</a>
           </div>
         </div>
