--- a/contact/login.html
+++ b/contact/login.html
@@ -52,7 +52,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link blog-link " href="/english.html" target="_blank">My Blogs</a>
+          <a class="nav-link blog-link " href="card.html" target="_blank">My Blogs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link blog-link" href="/blog1.html" target="_blank">New Release</a>
