--- a/Blog_13.html
+++ b/Blog_13.html
@@ -57,7 +57,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link blog-link " href="english.html">My Blogs</a>
+            <a class="nav-link blog-link " href=card.html">My Blogs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
