--- a/Blog_4.html
+++ b/Blog_4.html
@@ -56,9 +56,9 @@
             <a class="nav-link" href="contact/login.html">Contact</a>
           </li>
 
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link blog-link "href=card.html">My Blogs</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
           </li>
