--- a/contact/login.html
+++ b/contact/login.html
@@ -51,9 +51,9 @@
           <a class="nav-link" href="login.html">Contact</a>
         </li>
         
-        <li class="nav-item">
+<!--         <li class="nav-item">
           <a class="nav-link blog-link " href="card.html" target="_blank">My Blogs</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link blog-link" href="/blog1.html" target="_blank">New Release</a>
         </li>
