--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
                 <a class="nav-link" href="#">Achievements</a>
               </li> -->
               
-              <li class="nav-item">
+<!--               <li class="nav-item">
                 <a class="nav-link" href="/contact/login.html">Contact</a>
-              </li>
+              </li> -->
               
               <li class="nav-item">
                 <a class="nav-link blog-link " href="card.html" target="_blank">My Blogs</a>
