--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         <a class="nav-link" href="#">Achievements</a>
                     </li> -->
 
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link" href="login.html">Contact</a>
-                    </li>
+                    </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link blog-link " href=card.html target="_blank"> Blogs</a>
