--- a/blog1.html
+++ b/blog1.html
@@ -52,12 +52,12 @@
             <a class="nav-link" href="#">Achievements</a>
           </li> -->
 
-<!--           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="contact/login.html">Contact</a>
-          </li> -->
+          </li>
 
           <li class="nav-item">
-            <a class="nav-link blog-link " href="card.html">My Blogs</a>
+            <a class="nav-link blog-link " href="english.html">My Blogs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
@@ -202,13 +202,13 @@
             </figure>
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 d-flex flex-column mt-5 links">
-<!--             <h2>LINKS</h2> -->
-<!--             <a href="">Home</a>
+            <h2>LINKS</h2>
+            <a href="">Home</a>
             <a href="">About</a>
             <a href="">Achievements</a>
             <a href="">Contact</a>
             <a href="">English blog</a>
-            <a href="">Urdu blog</a> -->
+            <a href="">Urdu blog</a>
           </div>
           <div class="col-12 col-md-4 col-lg-4 mb-3 mt-5">
             <div class="icons icon">
