--- a/english.html
+++ b/english.html
@@ -48,12 +48,12 @@
               <a class="nav-link" href="#">Achievements</a>
             </li> -->
             
-<!--             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="/contact/login.html">Contact</a>
-            </li> -->
+            </li>
             
             <li class="nav-item">
-              <a class="nav-link blog-link " href=card.html" target="_blank">My Blogs</a>
+              <a class="nav-link blog-link " href="english.html" target="_blank">My Blogs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link blog-link" href="blog1.html" target="_blank">New Release</a>
